# inventory_application

./: .gitignore  .readthedocs.yml  noxfile.py  pyproject.toml
inventory_app/: .gitignore
inventory_app/infrastructure/: app.py
inventory_app/infrastructure/cdk.out/: inventory-app.template.json  manifest.json  tree.json
inventory_app/infrastructure/chalice.out/3c5f1915254f445881d31a5137360c97/: sam.json
inventory_app/infrastructure/chalice.out/801828f4049c4bc6a038a154f8bc63bc/: sam.json
inventory_app/infrastructure/chalice.out/d27d8bf0165249cfb64cb5847271df1f/: sam.json
inventory_app/infrastructure/chalice.out/dcf666bf05a543209967c1022ff74316/: sam.json
inventory_app/infrastructure/stacks/: chaliceapp.py
inventory_app/runtime/: app.py  inventory.py  item.py  test_app.py
inventory_app/runtime/.chalice/: config.json
inventory_app/terraform/: .terraform.lock.hcl  api.tf  data.tf  lambdas.tf  outputs.tf  provider.tf  s3_iam_policy.tpl  s3bucket.tf  security.tf  workspace.tf
