[tool.poetry]
name = "inventory_application"
version = "0.1.0"
description = ""
authors = ["Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
Sphinx = "^4.2.0"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-rtd-theme = "^1.0.0"
"aws-cdk.core" = "^1.123.0"
"aws-cdk.aws-dynamodb" = "^1.123.0"
chalice = {version = "^1.24.2", extras = ["cdk"]}
boto3 = "^1.18.44"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
xdoctest = "^0.15.8"
pytest-mock = "^3.6.1"
coverage = {version = "^5.5", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
